--- a/drug_KG.ipynb
+++ b/drug_KG.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "# if your device is cup, install this version\n",
+    "# if your device is cpu, install this version\n",
     "pip install  dgl -f https://data.dgl.ai/wheels/torch-2.3/repo.html"
    ]
   },
